# QAAutomation

./: .env.example  .gitignore  AUTHENTICATION_GUIDE.md  Cargo.toml  GETTING_STARTED.md  README.md  VISUAL_ENGINE_STATUS.md  comparison_result.json  complete_qa_endpoint.py  debug_execute_tests.py  debug_service_integration.py  debug_validdo_auth.py  debug_workflow.sh  docker-compose.yml  figma_analysis_result.json  sample_requirements.md  start_visual_engine.sh  test_api.sh  test_complete_orchestrator.sh  test_complete_qa_endpoint.sh  test_complete_workflow.py  test_execution_result.json  test_executor_direct.py  test_fixed_integration.py  test_integrated_workflow.py  test_llm_direct.py  test_llm_minimal.py  test_minimal_executor.py  test_minimal_flow.py  test_service_integration.py  test_visual_engine_api.sh  website_analysis_result.json
.claude/: settings.local.json
docs/: DEBUGGING_GUIDE.md  HOW_THE_BACKEND_WORKS.md  MICROSERVICES_OVERVIEW.md  ORCHESTRATOR_GUIDE.md  REAL_WORLD_TESTING_GUIDE.md  SERVICE_ENDPOINTS_REFERENCE.md  working_of_lexiqa.md
frontend/: MVP_README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ResultsDashboard.tsx  TestConfiguration.tsx  WorkflowProgress.tsx
frontend/src/contexts/: WorkflowContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: workflow.ts
infrastructure/sql/: init.sql
scripts/: db_inspector.sh  setup_webdriver.sh
services/python/: .env.example  README.md
services/python/auth-manager/: authentication_manager.py  main.py  requirements.txt  start.sh
services/python/computer-vision/: README.md  accessibility_analyzer.py  component_detector.py  config.py  demo_computer_vision.py  main.py  ocr_processor.py  requirements.txt  start.sh  test_computer_vision.py  visual_comparator.py
services/python/document-parser/: Dockerfile  doc_parser_config.py  document_parsers.py  llm_integration.py  main.py  parser_manager.py  requirements.txt  start.sh  test_document_parser.py  test_integration_simple.py  test_llm_integration.py  test_service_endpoints.py
services/python/figma-service/: Dockerfile  figma_analyzer.py  figma_client.py  main.py  requirements.txt  start.sh  test_figma_service.py  test_generator.py
services/python/llm-integration/: Dockerfile  debug_azure.py  llm_providers.py  main.py  models.py  prompt_manager.py  rate_limiter.py  requirements.txt  start.sh  test_generator.py  test_llm_service.py  utils.py
services/python/nlp-service/: README.md  config.py  demo_nlp_service.py  entity_extractor.py  main.py  main_minimal.py  requirements.txt  start.sh  test_nlp_service.py  text_analyzer.py  text_similarity.py
services/python/orchestrator/: README.md  demo_document_to_tests.py  demo_generated_tests.json  main.py  requirements.txt  smart_unified_generator.py  start.sh  test_unified_generator.py  unified_test_generator.py
services/python/shared/: __init__.py  config.py  models.py  requirements.txt  service_integration.py  utils.py
services/python/workflow-orchestrator/: main.py  requirements.txt  start.sh
services/shared/: Cargo.toml
services/shared/src/: lib.rs
services/test-executor/: Cargo.toml
services/test-executor/src/: browser.rs  executor.rs  lib.rs  main.rs  models.rs  runner.rs
services/visual-engine/: Cargo.toml
services/visual-engine/src/: browser.rs  browser_real.rs  browser_simple.rs  comparison.rs  lib.rs  main.rs  storage.rs
services/website-analyzer/: Cargo.toml  Dockerfile
services/website-analyzer/src/: analyzer.rs  browser.rs  database.rs  lib.rs  main.rs  models.rs
