[package]
name = "test-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Service-specific dependencies
# Browser automation
fantoccini = "0.21"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"

# Test framework and runner
async-trait = "0.1"

# Database integration
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], default-features = false }

# Configuration
dotenvy = "0.15"

# Local dependencies
shared = { path = "../shared" }

[[bin]]
name = "test-executor"
path = "src/main.rs"

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"